--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
 <body>
  <div class="login">
-	<h1>Profit Prediction</h1>
+	<h1>Profit Prediction PK</h1>
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
